[gd_scene load_steps=17 format=3 uid="uid://b71ry63srqrdy"]

[ext_resource type="Script" uid="uid://18e7n6gvmn03" path="res://scenes/game/Playground/Playground.gd" id="1_4ts3o"]
[ext_resource type="Texture2D" uid="uid://dxw54ee33wbrm" path="res://assets/images/back.png" id="2_mxuir"]
[ext_resource type="PackedScene" uid="uid://ias8gsdjebhw" path="res://scenes/ui/TouchCamera/TouchCamera.tscn" id="2_ylx20"]
[ext_resource type="Theme" uid="uid://yqpu1k43isuw" path="res://themes/kenney_rpg.tres" id="3_fgile"]
[ext_resource type="PackedScene" uid="uid://ehd8l4wredkr" path="res://scenes/ui/ProgressPanel/ProgressPanel.tscn" id="4_47ar2"]
[ext_resource type="PackedScene" uid="uid://p41vq4676q75" path="res://scenes/ui/NavButtons/NavButtons.tscn" id="4_70ndd"]
[ext_resource type="Texture2D" uid="uid://bobvyiugtptpr" path="res://assets/images/button_menu.png" id="4_k61c5"]
[ext_resource type="Texture2D" uid="uid://ch22168q55x3j" path="res://assets/images/button_menu_pressed.png" id="5_s87kq"]
[ext_resource type="PackedScene" uid="uid://dbfh1alqkfy2t" path="res://scenes/ui/SceneTransition/SceneTransition.tscn" id="7_w6wfa"]
[ext_resource type="PackedScene" uid="uid://di116jnep8f6t" path="res://scenes/ui/LevelSummaryContainer/LevelSummaryContainer.tscn" id="8_70vhg"]
[ext_resource type="Texture2D" uid="uid://dlxo2omwq38n5" path="res://assets/images/button_cancel.png" id="8_mxuir"]
[ext_resource type="Texture2D" uid="uid://cax24r4tc234t" path="res://assets/images/button_cancel_pressed.png" id="9_0gynf"]
[ext_resource type="PackedScene" uid="uid://c78sgpd3kkbu2" path="res://scenes/ui/NavController/NavController.tscn" id="9_o631k"]
[ext_resource type="Texture2D" uid="uid://dysd3t3vacti6" path="res://assets/images/button_reset.png" id="10_lwh4g"]
[ext_resource type="PackedScene" uid="uid://4j3ebc64sxog" path="res://scenes/ui/LevelMenu/LevelMenu.tscn" id="11_ji8ts"]
[ext_resource type="Texture2D" uid="uid://nty1se8whswd" path="res://assets/images/button_reset_pressed.png" id="11_yp2d6"]

[node name="Playground" type="Node2D"]
process_mode = 1
script = ExtResource("1_4ts3o")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color(0.821789, 0.821789, 0.821789, 1)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mxuir")
stretch_mode = 6

[node name="TouchCamera" parent="." instance=ExtResource("2_ylx20")]
zoom = Vector2(3, 3)
editor_draw_drag_margin = true
min_zoom = 2.0
max_zoom = 5.0

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="HSplitContainer" type="HSplitContainer" parent="UiLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
split_offset = -640
dragging_enabled = false
dragger_visibility = 1

[node name="Control" type="Control" parent="UiLayer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="UiLayer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 1280

[node name="HudContainer" type="MarginContainer" parent="UiLayer/HSplitContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_fgile")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="TextureButton" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
shortcut_in_tooltip = false
texture_normal = ExtResource("4_k61c5")
texture_pressed = ExtResource("5_s87kq")
ignore_texture_size = true
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ProgressPanel" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer2/MarginContainer" instance=ExtResource("4_47ar2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="UndoButton" type="TextureButton" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
shortcut_in_tooltip = false
texture_normal = ExtResource("8_mxuir")
texture_pressed = ExtResource("9_0gynf")
ignore_texture_size = true
stretch_mode = 4

[node name="RestartButton" type="TextureButton" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
shortcut_in_tooltip = false
texture_normal = ExtResource("10_lwh4g")
texture_pressed = ExtResource("11_yp2d6")
ignore_texture_size = true
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="NavButtons" parent="UiLayer/HSplitContainer/HSplitContainer/HudContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_70ndd")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="UiLayer/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SummaryContainer" parent="UiLayer" instance=ExtResource("8_70vhg")]
visible = false

[node name="SceneTransitionRect" parent="UiLayer" instance=ExtResource("7_w6wfa")]

[node name="NavController" parent="." instance=ExtResource("9_o631k")]
actions_to_track = Array[String](["step_up", "step_left", "step_right", "step_down", "undo_step"])

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="LevelMenu" parent="MenuLayer" instance=ExtResource("11_ji8ts")]
process_mode = 2
visible = false
